--- a/cityplanning/package.json
+++ b/cityplanning/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-router": "^7.0.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
